--- a/MedClient/Authenticate.xaml
+++ b/MedClient/Authenticate.xaml
@@ -1,46 +1,59 @@
-﻿<Window x:Class="MedClient.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Authenticate" Height="224.159" Width="305.751">
-    <Grid>
-        <TabControl HorizontalAlignment="Left"
-		    Height="214"
-		    VerticalAlignment="Top"
-		    Width="323">
-            <TabItem Header="Sign In">
-                <Grid Background="#FFE5E5E5" Margin="0,-1,24,17">
-                    <TextBlock HorizontalAlignment="Left"
-			       Margin="19,25,0,0"
-			       TextWrapping="Wrap"
-			       Text="Login:"
-			       VerticalAlignment="Top"
-			       Width="39" Height="27"/>
-                    <TextBlock HorizontalAlignment="Left"
-                    	Margin="19,57,0,0"
-                    	TextWrapping="Wrap"
-                    	Text="Password:"
-                    	VerticalAlignment="Top"
-                    	Width="54" Height="27" RenderTransformOrigin="0.59,3.889"/>
-                    <TextBox x:Name="loginText" HorizontalAlignment="Left" Height="23" Margin="87,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170"/>
-                    <TextBox x:Name="password_Text" HorizontalAlignment="Left" Height="23" Margin="87,57,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170"/>
-                    <Button x:Name="LoginButton" Content="Enter!" HorizontalAlignment="Left" Margin="19,101,0,0" VerticalAlignment="Top" Width="238" Click="LoginButton_Click"/>
-                    <Button Content="Button" HorizontalAlignment="Left" Margin="31,140,0,0" VerticalAlignment="Top" Width="75"/>
-                </Grid>
-            </TabItem>
-            <TabItem Header="Sign Up">
-                <Grid Background="#FFE5E5E5" Margin="0,-6,24,19">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="15"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock HorizontalAlignment="Left"
-			       Margin="10,10,0,0"
-			       TextWrapping="Wrap"
-			       Text="I want some cheese."
-			       VerticalAlignment="Top"
-			       Width="121" Grid.ColumnSpan="2"/>
-                </Grid>
-            </TabItem>
-        </TabControl>
-    </Grid>
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="MedClient.MainWindow"
+        Title="Authenticate" Height="198.159" Width="305.751">
+    <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch"   >
+        <TabItem Header="Sign In">
+            <Grid Margin="0,0,0,0" Background="#FFE5E5E5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="67*"/>
+                    <ColumnDefinition Width="225*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock HorizontalAlignment="Left"
+					Margin="19,25,0,0"
+					TextWrapping="Wrap"
+					Text="Login:"
+					VerticalAlignment="Top"
+					Width="39" Height="27"/>
+                <TextBlock HorizontalAlignment="Left"
+					Margin="19,57,0,0"
+					TextWrapping="Wrap"
+					Text="Password:"
+					VerticalAlignment="Top"
+					Width="54" Height="27" RenderTransformOrigin="0.59,3.889" Grid.ColumnSpan="2"/>
+                <TextBox x:Name="loginText" HorizontalAlignment="Left" Height="23" Margin="20,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Text="ivan1" Grid.Column="1"/>
+                <Button x:Name="LoginButton" Content="Enter!" HorizontalAlignment="Left" Margin="20,101,0,0" VerticalAlignment="Top" Width="170" Click="LoginButton_Click" Grid.Column="1"/>
+                <PasswordBox x:Name="password_Text" HorizontalAlignment="Left" Margin="20,62,0,0" VerticalAlignment="Top" Width="170" Height="22" Password="111" Cursor="" Grid.Column="1"/>
+            </Grid>
+        </TabItem>
+        <TabItem Header="Sign Up">
+
+
+            <Grid HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Top"  Margin="10,10,0,0">
+                <StackPanel>
+                    <Label Content="Make in full size..." HorizontalAlignment="Right" VerticalAlignment="Top"/>
+                    <Image x:Name="photo" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="120" Height="120"  Source="Images/man.jpg" Stretch="Uniform"/>
+                    <Label Content="Name" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <TextBox x:Name="name" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100"/>
+
+                    <Label  Content="Sourname" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <TextBox x:Name="sourname" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100"/>
+
+                    <Label Content="Age" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <ListBox x:Name="age" HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" Height="22">
+                        <System:Int32>20</System:Int32>
+                        <System:Int32>21</System:Int32>
+                        <System:Int32>22</System:Int32>
+                    </ListBox>
+
+                    <Label Content="Hospital" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <Label x:Name="hospital_name"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="18"/>
+                </StackPanel>
+            </Grid>
+
+
+
+        </TabItem>
+    </TabControl>
 </Window>
