--- a/MedClient/App.xaml
+++ b/MedClient/App.xaml
@@ -4,5 +4,11 @@
              StartupUri="Authenticate.xaml">
     <Application.Resources>
          
+    	<ResourceDictionary>
+    		<ResourceDictionary.MergedDictionaries>
+    			<ResourceDictionary Source="ResourceDictionary1.xaml"/>
+    		</ResourceDictionary.MergedDictionaries>
+    	</ResourceDictionary>
+         
     </Application.Resources>
 </Application>
