--- a/MedClient/Authenticate.xaml
+++ b/MedClient/Authenticate.xaml
@@ -2,57 +2,97 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="MedClient.MainWindow"
-        Title="Authenticate" Height="198.159" Width="305.751">
-    <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch"   >
-        <TabItem Header="Sign In">
+        Title="Authenticate" Height="218.159" Width="359.751" Loaded="Window_Loaded"  Foreground="White">
+
+    <TabControl x:Name="tabControl" ItemContainerStyle="{StaticResource chevronTabItemStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" SelectionChanged="TabControl_SelectionChanged" Foreground="White"   >
+        <TabItem Header="Sign In" Background="DarkCyan">
             <Grid Margin="0,0,0,0" Background="#FFE5E5E5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="67*"/>
-                    <ColumnDefinition Width="225*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="64*"/>
+                    <ColumnDefinition Width="267*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock HorizontalAlignment="Left"
-					Margin="19,25,0,0"
+					Margin="4,25,0,0"
 					TextWrapping="Wrap"
 					Text="Login:"
 					VerticalAlignment="Top"
-					Width="39" Height="27"/>
+					Width="39" Height="27" Foreground="Black" Style="{DynamicResource TextBlockStyle1}" Grid.Column="1"/>
                 <TextBlock HorizontalAlignment="Left"
-					Margin="19,57,0,0"
+					Margin="4,57,0,0"
 					TextWrapping="Wrap"
 					Text="Password:"
 					VerticalAlignment="Top"
-					Width="54" Height="27" RenderTransformOrigin="0.59,3.889" Grid.ColumnSpan="2"/>
-                <TextBox x:Name="loginText" HorizontalAlignment="Left" Height="23" Margin="20,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Text="ivan1" Grid.Column="1"/>
-                <Button x:Name="LoginButton" Content="Enter!" HorizontalAlignment="Left" Margin="20,101,0,0" VerticalAlignment="Top" Width="170" Click="LoginButton_Click" Grid.Column="1"/>
-                <PasswordBox x:Name="password_Text" HorizontalAlignment="Left" Margin="20,62,0,0" VerticalAlignment="Top" Width="170" Height="22" Password="111" Cursor="" Grid.Column="1"/>
+					Width="54" Height="27" RenderTransformOrigin="0.59,3.889" Foreground="Black" Style="{DynamicResource TextBlockStyle1}" Grid.Column="1"/>
+                <TextBox x:Name="loginText" HorizontalAlignment="Left" Height="23" Margin="20,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" Text="ivan1" Grid.Column="2"/>
+                <Button x:Name="LoginButton" Content="Log in" HorizontalAlignment="Left" Margin="20,121,0,0" VerticalAlignment="Top" Width="176" Click="LoginButton_Click" Grid.Column="2" RenderTransformOrigin="1,1" Background="#99373737">
+                </Button>
+                <PasswordBox x:Name="password_Text" HorizontalAlignment="Left" Margin="20,62,0,0" VerticalAlignment="Top" Width="199" Height="22" Password="111" Cursor="" Grid.Column="2"/>
+                <RadioButton Name="doctorType" Content="Doctor" IsChecked="False" Grid.Column="2" HorizontalAlignment="Left" Margin="20,101,0,0" VerticalAlignment="Top"/>
+                <RadioButton Name="pacientType" Content="Pacient"  IsChecked="True"  Grid.Column="2" HorizontalAlignment="Left" Margin="134,101,0,0" VerticalAlignment="Top"/>
             </Grid>
         </TabItem>
-        <TabItem Header="Sign Up">
+        <TabItem Header="Sign Up" Background="LightSkyBlue">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="400*"/>
+                    <ColumnDefinition Width="233*"/>
+                </Grid.ColumnDefinitions>
+
+                <GroupBox Header="Room" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Background="#FFE5E5E5">
+
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel HorizontalAlignment="Stretch" Height="336" VerticalAlignment="Top"  Margin="10,10,0,0">
+
+                            <StackPanel>
+                                <Image Name="photo" HorizontalAlignment="center"  VerticalAlignment="Top" Width="120" Height="120"  Source="Images/man.jpg" Stretch="Uniform"></Image>
+                                <Label Content="Name" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
+
+                            </StackPanel>
 
 
-            <Grid HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Top"  Margin="10,10,0,0">
-                <StackPanel>
-                    <Label Content="Make in full size..." HorizontalAlignment="Right" VerticalAlignment="Top"/>
-                    <Image x:Name="photo" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="120" Height="120"  Source="Images/man.jpg" Stretch="Uniform"/>
-                    <Label Content="Name" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <TextBox x:Name="name" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100"/>
+                            <TextBox Name="name" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"></TextBox>
 
-                    <Label  Content="Sourname" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <TextBox x:Name="sourname" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100"/>
+                            <Label  Content="Sourname" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
+                            <TextBox Name="sourname" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"></TextBox>
 
-                    <Label Content="Age" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <ListBox x:Name="age" HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" Height="22">
-                        <System:Int32>20</System:Int32>
-                        <System:Int32>21</System:Int32>
-                        <System:Int32>22</System:Int32>
-                    </ListBox>
+                            <Label  Content="Password" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
+                            <TextBox Name="password" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"></TextBox>
 
-                    <Label Content="Hospital" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <Label x:Name="hospital_name"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="18"/>
-                </StackPanel>
+
+                            <Label Content="Age" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
+                            <TextBox DataContext="0"  Name="age" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80"></TextBox>
+                            <CheckBox x:Name="isDoctor" Content="Doctor"  HorizontalAlignment="Center"  Width="100" Height="21" Margin="0,10,0,0"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Stretch"  Margin="10,10,0,0">
+
+                            <Label Content="hospitals" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
+                            <ListBox Name="hospitals" HorizontalAlignment="Center" VerticalAlignment="Top" Width="210" Height="250">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel  Orientation="Horizontal">
+                                            <Label Content="{Binding}"></Label>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+
+
+                            </ListBox>
+
+                            <Button Content="Create user" Width="220" Margin="10,10,0,0" Click="Button_Click"/>
+
+                        </StackPanel>
+                    </Grid>
+                </GroupBox>
+
             </Grid>
-
-
 
         </TabItem>
     </TabControl>
