--- a/MedClient/PatientRoom.xaml
+++ b/MedClient/PatientRoom.xaml
@@ -1,28 +1,106 @@
-﻿<Window x:Class="MedClient.PatientRoom"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="PatientRoom" Height="300" Width="300" Closed="Window_Closed" Loaded="Window_Loaded">
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="MedClient.PatientRoom"
+        Title="PatientRoom" Height="380" Width="540" Closed="Window_Closed" Loaded="Window_Loaded">
     <Grid Background="#FFE5E5E5">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="400*"/>
+                <ColumnDefinition Width="233*"/>
+            </Grid.ColumnDefinitions>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="200*"/>
-            <RowDefinition Height="40"/>
-        </Grid.RowDefinitions>
+            <GroupBox Header="Room" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Background="#FFE5E5E5">
 
-        <Label Grid.Row="0" Name="nameData" HorizontalAlignment="Center"></Label>
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-        <ListBox Grid.Row="1" Name="listbox1" >
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" >
-                        <Label Content="{Binding}"></Label>
+                    <StackPanel HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Top"  Margin="10,10,0,0">
+
+                        <StackPanel>
+                            <Image x:Name="photo" HorizontalAlignment="center"  VerticalAlignment="Top" Width="120" Height="120"  Source="Images/man.jpg" Stretch="Uniform"/>
+                            <Label Content="Name" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+                        </StackPanel>
+
+
+                        <TextBox x:Name="name" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"/>
+
+                        <Label  Content="Sourname" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                        <TextBox x:Name="sourname" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"/>
+
+                        <Label Content="Age" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                        <Label Content="0"  x:Name="age" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+                        <Label Content="Hospital" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                        <Label x:Name="hospital_name"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="22"/>
                     </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
 
-        <Button Grid.Row="2" Name="selectDoctorButton" HorizontalAlignment="Center"  Width="178" Height="28" Content="Select" Margin="62,6,52,6" Click="selectDoctorButton_Click"></Button>
+                    <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Stretch"  Margin="10,10,0,0">
+
+                        <Label Content="Types of deceas" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                        <ComboBox Name="deseasesCombo" DataContext="{Binding deseases}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition/>
+                                            <ColumnDefinition/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock  Grid.Column="0" Text="{Binding name}" HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.FontWeight="Bold"  />
+                                        <TextBlock  Grid.Column="1" Text="{Binding about}" HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+
+                                    </Grid>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel >
+                                <TextBlock Text="Date:" HorizontalAlignment="Left"/>
+                                <TextBox x:Name="targetDate" Height="22"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Column="1">
+                                <TextBlock Text="Start time:" HorizontalAlignment="Left"/>
+                                <ComboBox Name="targetTime"></ComboBox>
+                            </StackPanel>
+                        </Grid>
+
+                        <TextBlock Text="State" HorizontalAlignment="Center" Margin="0,15,0,0"/>
+
+                        <ListBox x:Name="doctorsListBox" DataContext="{Binding Hospital}">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="20*"/>
+                                            <ColumnDefinition Width="10*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Grid.Column="0" Text="{Binding hospital}" TextBlock.FontWeight="Bold"/>
+                                        <TextBlock Grid.Column="1" Text="{Binding doctor}"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+
+                        <Button Name="Search" Content="Search" Width="220" Margin="10,10,0,0" Click="Search_Click"/>
+                        <Button Name="Assign" Content="Assign" Width="220" Margin="10,10,0,0" Click="Assign_Click"/>
+
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
+            <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="44,378,0,0" VerticalAlignment="Top" Width="75"/>
+
+        </Grid>
 
     </Grid>
 </Window>
