--- a/MedClient/Room.xaml
+++ b/MedClient/Room.xaml
@@ -1,63 +1,78 @@
-﻿<Window x:Class="MedClient.Room"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Room" Height="380" Width="540" Closed="Window_Closed" Loaded="Window_Loaded">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="400*"/>
-            <ColumnDefinition Width="233*"/>
-        </Grid.ColumnDefinitions>
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MedClient.Room"
+        Title="Room" Height="371" Width="540" Closed="Window_Closed" Loaded="Window_Loaded">
 
-        <GroupBox Header="Room" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Background="#FFE5E5E5">
-            
-            <Grid >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                
-                <StackPanel HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Top"  Margin="10,10,0,0">
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="400*"/>
+			<ColumnDefinition Width="233*"/>
+		</Grid.ColumnDefinitions>
 
-				<StackPanel> 
-					<Image Name="photo" HorizontalAlignment="center"  VerticalAlignment="Top" Width="120" Height="120"  Source="Images/man.jpg" Stretch="Uniform"></Image>
-                    <Label Content="Name" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
-         
+		<GroupBox Header="Room" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Background="#FFE5E5E5">
+
+			<Grid >
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*"/>
+					<ColumnDefinition Width="*"/>
+				</Grid.ColumnDefinitions>
+
+				<StackPanel HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Top"  Margin="10,10,0,0">
+
+					<StackPanel>
+						<Image x:Name="photo" HorizontalAlignment="center"  VerticalAlignment="Top" Width="120" Height="120"  Source="Images/man.jpg" Stretch="Uniform"/>
+						<Label Content="Name" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+					</StackPanel>
+
+
+					<TextBox x:Name="name" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"/>
+
+					<Label  Content="Sourname" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+					<TextBox x:Name="sourname" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"/>
+
+					<Label Content="Age" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+					<Label Content="0"  x:Name="age" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+					<Label Content="Hospital" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+					<Label x:Name="hospital_name"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="22"/>
 				</StackPanel>
-                  
-					
-				           <TextBox Name="name" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"></TextBox>
-                    
-                    <Label  Content="Sourname" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
-                    <TextBox Name="sourname" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100"></TextBox>
-                    
-                    <Label Content="Age" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
-                    <Label Content="0"  Name="age" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
 
-                    <Label Content="Hospital" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
-                    <Label Name="hospital_name"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="22"></Label>
-                </StackPanel>
-                
-                <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Stretch"  Margin="10,10,0,0">
+				<StackPanel Grid.Column="1" HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Stretch"  Margin="10,10,0,0">
 
-                    <Label Content="Patients" HorizontalAlignment="Center" VerticalAlignment="Top"></Label>
-                    <ListBox Name="hospitals" HorizontalAlignment="Center" VerticalAlignment="Top" Width="210" Height="250">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel  Orientation="Horizontal">
-                                    <Label Content="{Binding}"></Label>
-                                </StackPanel>
+					<Label Content="Pacients" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                    
+					<ListBox  Name="pacients" DataContext="{Binding Pacient}" Height="250">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+                                <Grid >
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="35"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Border  BorderBrush="Black" BorderThickness="1" Margin="0,0,0,45.667" >
+                                        <Image Grid.Column="0"  VerticalAlignment="Top"  Source="Images/man.jpg" Stretch="Uniform"/>
+                                    </Border>
+                                    <StackPanel Grid.Column="1" Width="59.575" Height="auto"  HorizontalAlignment="Center"  VerticalAlignment="Top" Orientation="Vertical" Margin="0,0,-9.575,0">
+                                        <TextBlock Text="{Binding hospitalName}"></TextBlock>
+                                        <TextBlock Text="{Binding fullname}"/>
+                                        <TextBlock Text="{Binding decease}"/>
+                                        <TextBlock Text="{Binding decease}"/>
+                                        <TextBlock Text="{Binding doctorFIO}"/>
+                                    </StackPanel>
+                                </Grid>
+                                
                             </DataTemplate>
-                        </ListBox.ItemTemplate>
-                        
-                        
-                    </ListBox>
+						</ListBox.ItemTemplate>
+					</ListBox>
 
-                    <Button Content="clickme" Width="220" Margin="10,10,0,0" Click="Button_Click"/>
-                    
-                </StackPanel>
-            </Grid>
-        </GroupBox>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="44,378,0,0" VerticalAlignment="Top" Width="75"/>
+				<Button Content="update pacient" Width="220" Margin="10,10,0,0" Click="Button_Click"/>
+
+				</StackPanel>
+			</Grid>
+		</GroupBox>
 
     </Grid>
 </Window>
